# pluto-browser

./: Cargo.toml  README.md  flake.nix  result
.github/workflows/: rust.yml
server/: .env  .env.example  Cargo.toml  diesel.toml
server/migrations/2024-03-25-070401_auth/: down.sql  up.sql
server/migrations/2024-05-02-140742_schema/: down.sql  up.sql
server/src/: main.rs
server/src/models/: user.rs
server/src/routes/: auth.rs
server/src/schema/: schema.rs
src/: gui.rs  main.rs  tests.rs  utils.rs
src/components/: action_buttons.rs  browser.rs  button.rs  headerbar.rs  homepage.rs  mod.rs  searchbar.rs  settings.rs
src/pages/: blank.html  homepage.html  unknown.html
src/styles/: style.css
