[package]
name = "pluto-browser"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "^1.0"
once_cell = "1.8"
libc = "^0.2"
cairo-rs = "^0.18.0"
gdk = "^0.18.0"
gdk-sys = "^0.18.0"
gio = "^0.18.0"
gio-sys = "^0.18.0"
glib = "^0.18.0"
glib-sys = "^0.18.0"
gobject-sys = "^0.18.0"
gtk = "^0.18.0"
gtk-sys = "^0.18.0"
webkit2gtk = "2.0.1"
atk = "0.18.0"
regex = "1.10.3"
url = "2.5.0"

  [dependencies.java_script_core]
  package = "javascriptcore-rs"
  version = "=1.1"

  [dependencies.soup]
  package = "soup3"
  version = "0.5"

  [dependencies.ffi]
  package = "webkit2gtk-sys"
  version = "2.0.1"
