[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "^0.7"
sqlx = { version = "0.7", features = ["postgres"] }
tokio = { version = "1.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
hyper = "1.2.0"
tower = "0.4"
