[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "^0.7"
tokio = { version = "1.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
hyper = "1.2.0"
tower = "0.4"
diesel = { version = "2.1.0", features = ["postgres"] }
dotenvy = "0.15"
